# picoscope_mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_PLAN.md  README.md  pyproject.toml
src/picoscope_mcp/: __init__.py  device_manager.py  models.py  server.py  utils.py
src/picoscope_mcp/tools/: __init__.py  acquisition.py  advanced.py  analysis.py  configuration.py  discovery.py
tests/: test_tools.py
